# ctbc-payment-advisor

./: .env.example  .gitignore  CTBC_Project_Overview.md  README.md  gradio_app.py  package-lock.json  pyproject.toml  requirements.txt  system_architecture.drawio
.github/workflows/: ci.yml
Credit Card AI Payment Advisor/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
Credit Card AI Payment Advisor/e2e/: payment-advisor.spec.ts
Credit Card AI Payment Advisor/src/app/: App.tsx  api.ts  recommendations.ts  structuredStream.ts  updateQueue.ts
Credit Card AI Payment Advisor/src/app/components/: AgentThinkingPanel.tsx  CardSelectionPage.tsx  ChatInput.tsx  ChatMessage.tsx  LeftSidebar.tsx  RecommendationCarousel.tsx  (+3 more)
Credit Card AI Payment Advisor/src/constants/: cardConfig.ts
Credit Card AI Payment Advisor/src/styles/: theme.css
agent/: mcp_bridge.py  payment_agent.py  prompts.py
data/processed/: ctbc_cards.json  fubon_cards.json  merged_cards.json  promotions.json
data/scraped/: card_features.json
mcp_server/: chat.py  http_app.py  http_utils.py  server.py  tool_trace.py
mcp_server/tools/: compare.py  promotions.py  recommend.py  rewards.py  search.py
mcp_server/utils/: channel_mapper.py  data_loader.py  llm_parser.py
scraper/: card_feature_scraper.py  channel_mapper.py  ctbc_scraper.py  merge.py  microsite_scraper.py  run.py
tests/: recommend_stream_cases.py  test_chat_contract.py  test_mcp_tools.py  test_project_automation_contracts.py  test_recommend_stream_integration.py  test_user_stories.py
