[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ctbc-payment-advisor"
version = "2.0.0"
description = "中信×富邦信用卡支付建議系統（MCP Server + React Web Demo）"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "jsonschema>=4.21.0",
    "lxml>=5.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.scripts]
ctbc-mcp-http = "mcp_server.http_app:main"  # 統一 ASGI（REST + MCP + chat），給 Render / 本地用

[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv*", "tests*", "*.egg-info", "data*"]

[tool.setuptools.package-data]
"mcp_server" = ["data/processed/*.json", "data/scraped/*.json"]
